# WasmEdgeSDL

./: CMakeLists.txt  LICENSE.txt  README.md  WasmEdgeSDL_map.c  WasmEdgeSDL_map.h  WasmEdgeSDL_module.c  headergen.py  shimgen.py
guest/include/SDL3/: SDL_assert.h  SDL_asyncio.h  SDL_atomic.h  SDL_audio.h  SDL_blendmode.h  SDL_camera.h  SDL_clipboard.h  SDL_cpuinfo.h  SDL_dialog.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamepad.h  SDL_gpu.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_init.h  SDL_iostream.h  SDL_joystick.h  SDL_keyboard.h  SDL_loadso.h  SDL_locale.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_metal.h  SDL_misc.h  SDL_mouse.h  SDL_mutex.h  SDL_pixels.h  SDL_platform.h  SDL_power.h  SDL_process.h  SDL_properties.h  SDL_rect.h  SDL_render.h  SDL_sensor.h  SDL_stdinc.h  (+11 more)
shim/: WasmEdgeSDL_all.h  WasmEdgeSDL_assert.c  WasmEdgeSDL_assert.h  WasmEdgeSDL_asyncio.c  WasmEdgeSDL_asyncio.h  WasmEdgeSDL_atomic.c  WasmEdgeSDL_atomic.h  WasmEdgeSDL_audio.c  WasmEdgeSDL_audio.h  WasmEdgeSDL_camera.c  WasmEdgeSDL_camera.h  WasmEdgeSDL_clipboard.c  WasmEdgeSDL_clipboard.h  WasmEdgeSDL_cpuinfo.c  WasmEdgeSDL_cpuinfo.h  WasmEdgeSDL_dialog.c  WasmEdgeSDL_dialog.h  WasmEdgeSDL_error.c  WasmEdgeSDL_error.h  WasmEdgeSDL_events.c  WasmEdgeSDL_events.h  WasmEdgeSDL_filesystem.c  WasmEdgeSDL_filesystem.h  WasmEdgeSDL_gamepad.c  WasmEdgeSDL_gamepad.h  WasmEdgeSDL_gpu.c  WasmEdgeSDL_gpu.h  WasmEdgeSDL_guid.c  WasmEdgeSDL_guid.h  WasmEdgeSDL_haptic.c  WasmEdgeSDL_haptic.h  WasmEdgeSDL_hidapi.c  WasmEdgeSDL_hidapi.h  WasmEdgeSDL_hints.c  WasmEdgeSDL_hints.h  WasmEdgeSDL_init.c  WasmEdgeSDL_init.h  WasmEdgeSDL_iostream.c  WasmEdgeSDL_iostream.h  WasmEdgeSDL_joystick.c  (+64 more)
